--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       arObject.visible = false;
       scene.addNode(arObject);
 
-      let title = new Gltf2Node({url: 'media/gltf/text/text.gltf'});
-      arObject.addNode(title);
-
-      let flower = new Gltf2Node({url: 'media/gltf/Nagu_Genie.gltf'});
+      let flower = new Gltf2Node({url: 'media/gltf/asset.gltf'});
       arObject.addNode(flower);
 
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle1.gltf'});
@@ -80,7 +77,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       // Having a really simple drop shadow underneath an object helps ground
       // it in the world without adding much complexity.
       let shadow = new DropShadowNode();
-      vec3.set(shadow.scale, 4.3, 3.9, 3.7);
+      vec3.set(shadow.scale, 0.3, 0.1, 0.7);
       arObject.addNode(shadow);
 
       const MAX_FLOWERS = 1;
@@ -167,9 +164,6 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         newFlower.visible = true;
         newFlower.matrix = matrix;
 
-        title.visible = true;
-        title.matrix = matrix;
-        
         scene.addNode(newFlower);
         scene.addNode(title);
         
