--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
       import {Node} from './js/render/core/node.js';
       import {Gltf2Node} from './js/render/nodes/gltf2.js';
+      import {DropShadowNode} from './js/render/nodes/drop-shadow.js';
       import {vec3} from './js/render/math/gl-matrix.js';
       import {Ray} from './js/render/math/ray.js';
 
@@ -66,6 +67,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       arObject.visible = false;
       scene.addNode(arObject);
 
+      let title = new Gltf2Node({url: 'media/gltf/text/text.gltf'});
+      //arObject.addNode(title);
+
       let flower = new Gltf2Node({url: 'media/gltf/asset.gltf'});
       arObject.addNode(flower);
 
@@ -75,6 +79,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
       // Having a really simple drop shadow underneath an object helps ground
       // it in the world without adding much complexity.
+      let shadow = new DropShadowNode();
+      vec3.set(shadow.scale, 4.3, 3.9, 3.7);
+      //arObject.addNode(shadow);
 
       const MAX_FLOWERS = 1;
       let flowers = [];
@@ -160,6 +167,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         newFlower.visible = true;
         newFlower.matrix = matrix;
 
+        title.visible = true;
+        title.matrix = matrix;
+        
         scene.addNode(newFlower);
         scene.addNode(title);
         
